# yt-nota

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: plan.md
queues/: bau-wave1.txt  bau-wave2.txt  bau-wave3.txt  bau-wave4-troubleshooting.txt  bau-wave5-recursos.txt  cara-riqueza-MANIFEST.md  cara-riqueza-all.json  cara-riqueza-etapa2-pending.txt  cara-riqueza-wave01-fii-tickers-1.txt  cara-riqueza-wave02-fii-tickers-2.txt  cara-riqueza-wave03-fii-metodo-1.txt  cara-riqueza-wave04-fii-metodo-2.txt  cara-riqueza-wave05-acoes-br.txt  cara-riqueza-wave06-stocks-us.txt  cara-riqueza-wave07-renda-fixa-1.txt  cara-riqueza-wave08-renda-fixa-2.txt  cara-riqueza-wave09-renda-fixa-3.txt  cara-riqueza-wave10-renda-fixa-4.txt  cara-riqueza-wave11-cripto-1.txt  cara-riqueza-wave12-cripto-2.txt  cara-riqueza-wave13-macro-1.txt  cara-riqueza-wave14-macro-2.txt  cara-riqueza-wave15-macro-3.txt  cara-riqueza-wave16-carteira-1.txt  cara-riqueza-wave17-carteira-2.txt  cara-riqueza-wave18-carteira-3.txt  cara-riqueza-wave19-carteira-4.txt  cara-riqueza-wave20-renda-passiva-1.txt  cara-riqueza-wave21-renda-passiva-2.txt  cara-riqueza-wave22-renda-passiva-3.txt  cara-riqueza-wave23-renda-passiva-4.txt  cara-riqueza-wave24-renda-passiva-5.txt  cara-riqueza-wave25-renda-passiva-6.txt  cara-riqueza-wave26-patrimonio-1.txt  cara-riqueza-wave27-patrimonio-2.txt  cara-riqueza-wave28-patrimonio-3.txt  cara-riqueza-wave29-comportamento.txt
scripts/: install-skill.ps1  install-skill.sh
skills/yt-sintese/: SKILL.md
src/yt_nota/: __main__.py  cli.py  config.py  extractor.py  slug.py  transcript.py  (+2 more)
tests/: test_cli.py  test_slug.py  test_transcript.py  test_vault.py
(+3 files in other folders)
