[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-nota"
version = "0.2.4"
description = "CLI que extrai transcripts do YouTube e prepara drafts pra síntese no Claude Code"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Thais Vaz", email = "tvazdataengineer@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "yt-dlp>=2025.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
yt-nota = "yt_nota.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
